--- a/harpg-toolkit/styles/sidenavlayout.module.css
+++ b/harpg-toolkit/styles/sidenavlayout.module.css
@@ -1,4 +1,4 @@
-.navcontainer {
+.navContainer {
     display: grid;
     width: 100%;
     height: 100%;
@@ -10,7 +10,7 @@
     grid-template-columns: 130px 1fr;
 }
 
-.activetab {
+.activeTab {
     grid-area: tb;
     padding: 10px 10px 10px 30px;
 }
