--- a/harpg-toolkit/components/topnav.module.css
+++ b/harpg-toolkit/components/topnav.module.css
@@ -1,20 +1,23 @@
 .navContainer {
   background-color: #edf0f1;
-  height: 50px;
+  height: min-content;
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+}
+
+.leftBlock {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .mainLogo {
-  float: left;
-  height: auto;
-  width: auto;
   width: 50px;
   height: 50px;
 }
 
 .homeLink {
-  display: inline-block;
-  padding: 10px;
-  vertical-align: middle;
   font-size: 25px;
 }
 
@@ -23,14 +26,14 @@
 }
 
 .topNav {
-  float: right;
+  display: flex;
+  flex-flow: row wrap;
 }
 
 .topNav li {
   list-style: none;
   height: 50px;
   padding: 10px;
-  display: inline-block;
 }
 
 .topNav li:hover {
