--- a/harpg-toolkit/components/topnav.module.css
+++ b/harpg-toolkit/components/topnav.module.css
@@ -1,39 +1,39 @@
-.navContainer {
+.header {
   background-color: #edf0f1;
-  height: min-content;
-  display: flex;
-  justify-content: space-between;
-  flex-flow: row wrap;
-}
-
-.leftBlock {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  grid-area: hd;
 }
 
 .mainLogo {
-  width: 50px;
-  height: 50px;
+  float: left;
+  height: auto;
+  width: auto;
+  max-width: 50px;
+  max-height: 50px;
 }
 
 .homeLink {
+  max-height: 50px;
+  height: auto;
+  display: inline-block;
+  padding: 10px;
+  vertical-align: middle;
   font-size: 25px;
 }
 
 .homeLink:hover {
-  text-shadow: black 0px 1px 5px;
+  text-decoration: underline;
+
 }
 
 .topNav {
-  display: flex;
-  flex-flow: row wrap;
+  float: right;
 }
 
 .topNav li {
   list-style: none;
   height: 50px;
   padding: 10px;
+  display: inline-block;
 }
 
 .topNav li:hover {
