--- a/harpg-toolkit/styles/global.css
+++ b/harpg-toolkit/styles/global.css
@@ -4,8 +4,6 @@
 html {
   font-family: "Noto Sans", sans-serif;
   background-color: ghostwhite;
-  height: 100%;
-  width: 100%;
 
 }
 
@@ -13,6 +11,7 @@ html {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  
 }
 
 li, a, button {
@@ -21,4 +20,13 @@ li, a, button {
   font-size: 16px;
   color: #181818;
   text-decoration: none;
+}
+
+h1, h2, h3, h4, h5 {
+  padding: 5px 5px 5px 0px;
+}
+
+body {
+  width: 100%;
+  height: 100%;
 }
