--- a/harpg-toolkit/styles/home.module.css
+++ b/harpg-toolkit/styles/home.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-
+    align-content: center;
+    align-self: center;
 }
 
 .title {
@@ -10,7 +11,6 @@
 }
   
 .card {
-    display: inline-block;
     padding: 20px 20px 20px;
     max-width: max-content;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
