--- a/harpg-toolkit/styles/phenoapp.module.css
+++ b/harpg-toolkit/styles/phenoapp.module.css
@@ -1,6 +1,5 @@
 .button {
-    height: min-content;
-    width: min-content;
     background-color: #cfe2e9;
     position: relative;
+    padding: 10px 10px 10px 10px;
 }
